# CGIntegraGB

Projeto Final/: CMakeLists.txt  CMakeSettings.json  README.md
Projeto Final/shaders/: fragment.glsl  vertex.glsl
Projeto Final/src/: Camera.cpp  Camera.hpp  ModelLoader.cpp  ModelLoader.hpp  Shader.cpp  Shader.hpp  Trajectory.hpp  main.cpp
